src/test/ui/const-generics/issues/issue-72787.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-72787.rs:9:32
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                                ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-72787.rs:20:42
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                          ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-72787.rs:20:42
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                          ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-72787.rs:20:42
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                          ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-72787.rs:20:42
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                          ^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 5 previous errors

